adding raleway font

--- a/art-by-metu/layout/theme.liquid
+++ b/art-by-metu/layout/theme.liquid
@@ -10,32 +10,16 @@
   {{ content_for_header }} <!-- Header hook for plugins -->
   {{ 'tailwind.css' | asset_url | stylesheet_tag }}
   {{ 'application.js' | asset_url | script_tag }}
+  
 </head>
-<body class="bg-gray-500 px-10 py-20 mx-auto">
+<body class="bg-gray-500 px-10 py-20 mx-auto font-raleway">
 
-  {% for link in linklists.main-menu.links %}
-    {% assign child_list_handle = link.title | handleize %}
-    {% if linklists[child_list_handle].links != blank %}
-      <a href="{{ link.url }}">{{ link.title }}</a>
-      [{% for childlink in linklists[child_list_handle].links %}
-        <a href="{{ childlink.url }}">{{ childlink.title | escape }}</a>
-      {% endfor %}]
-    {% else %}
-      <a href="{{ link.url }}">{{ link.title }}</a>
-    {% endif %}
-  {% endfor %}
+  <header>Header</header>
+  <h2>Body</h2>
 
-  <a href="/cart">cart</a>
+  <footer>Footer</footer>
 
-  {% if shop.customer_accounts_enabled %}
-    {% if customer %}
-      <a href="/account">account</a>
-      {{ 'log out'  | customer_logout_link }}
-    {% else %}
-      {{ 'log in ' | customer_login_link }}
-      {{ 'register' | customer_register_link }}
-    {% endif %}
-  {% endif %}
+  
 
   <main role="main">
     {{ content_for_layout }}
