--- a/art-by-metu/assets/tailwind.css
+++ b/art-by-metu/assets/tailwind.css
@@ -475,13 +475,42 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
+.ml-2{
+  margin-left: 0.5rem;
+}
+
 .table{
   display: table;
 }
 
-.bg-gray-500{
+.h-4{
+  height: 1rem;
+}
+
+.h-6{
+  height: 1.5rem;
+}
+
+.h-5{
+  height: 1.25rem;
+}
+
+.w-4{
+  width: 1rem;
+}
+
+.w-6{
+  width: 1.5rem;
+}
+
+.bg-white{
   --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .px-10{
@@ -496,4 +525,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .font-raleway{
   font-family: raleway;
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
