tailwind error out it's now working

--- a/art-by-metu/layout/theme.liquid
+++ b/art-by-metu/layout/theme.liquid
@@ -19,13 +19,14 @@
   </style>
 
 </head>
-<body class="bg-white px-10 py-20 mx-auto font-raleway">
+<body class="bg-purple-700 px-10 py-20 mx-auto font-raleway">
 {% section 'header' %}
 
-  <header class="text-white">Header</header>
+  <header class="text-blue-600">Header</header>
   <h2 class="text-white">Body</h2>
+  
 
-  <footer class="text-white">Fowoter</footer>
+  <footer class="text-blue-600">Fowoter</footer>
 
   
 
