--- a/art-by-metu/assets/tailwind.css
+++ b/art-by-metu/assets/tailwind.css
@@ -503,14 +503,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1.5rem;
 }
 
-.bg-white{
+.bg-purple-700{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(126 34 206 / var(--tw-bg-opacity));
 }
 
 .px-10{
@@ -525,6 +520,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .font-raleway{
   font-family: raleway;
+}
+
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .text-white{
