--- a/art-by-metu/sections/header.liquid
+++ b/art-by-metu/sections/header.liquid
@@ -8,273 +8,16 @@
 {% else %}
   {% assign main_menu_linklist = section.settings.menu.links %}  
 {% endif %}
-
-<div class="relative bg-white " x-data="{ mobileMenuOpen: false, searchBarOpen: false }" x-cloak >
-  <div class="relative pt-2 ">
-    <div class="mx-auto px-4 sm:px-6">
-      <div class="flex justify-between items-center pt-2 pb-2 mt-30 md:justify-start md:space-x-10 -mt-2 ">
-
-      <div class="flex justify-between items-center -ml-1">
-        <!------STORE NAME/LOGO------>
-        <div class="flex justify-start lg:flex-1 truncate">
-          <a href="/">
-            <h1 class="text-3xl font-bold truncate tracking-wide"> <!-- {{shop.name}} --> NoTW<span class="font-extralight">&trade;</span></h1>
-          </a>
-                  
-        </div>
-
-
-
-        <!------NAVIGATION MENU------->
-
-                <nav class="hidden md:flex space-x-10 uppercase ml-5 z-10">
-                  {% for link in main_menu_linklist %} 
-                  {% if link.links !=blank%}
-          {% assign link_handle = link.handle | replace: '-' , '_'%} 
-
-                  <div class="relative" x-data="{ {{link_handle}}: false }">
-                    <button x-on:click="{{link_handle}} = ! {{link_handle}}" class="inline-flex items-center">
-                      {{ link.title }}
-                      {% render "icon-dropdown"%}
-                    </button>
-
-                      <div
-                      x-transition:enter="transition ease-out duration-300"
-                      x-transition:enter-start="opacity-0 translate-y-3"
-                      x-transition:enter-end="opacity-100 translate-y-0"
-                      x-transition:leave="transition ease-out duration-300"
-                      x-transition:leave-start="opacity-100 translate-y-0"
-                      x-transition:leave-end="opacity-0 translate-y-3"
-                      x-show="{{link_handle}}" @click.away= "{{link_handle}} = false"
-                      class="absolute z-10 -ml-5 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
-                          <div class="shadow-lg border ring-black ring-opacity-5 overflow-hidden rounded-lg">
-                              <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
-
-                              {% for childlink in link.links %}
-                                  <a href="{{childlink.url}}" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-100">
-                                      <div class="ml-4">
-                                          <p class="text-gray-900 text-sm font-medium">
-                                              {{childlink.title}}
-                                          </p>
-                                      </div>
-                                  </a>
-                              {% endfor %}  
-                              </div>
-                          </div>
-                      </div>
-
-                  </div>
-                  {% else %}
-                  <a
-                    href="{{ link.url }}"
-                    class="text-sm text-gray-500 hover:text-gray-700"
-                    >{{ link.title }}</a
-                  >
-                  {% endif %} {% endfor %}
-              </nav> 
+<div class="flex">
+  <div class="flex-none w-14 h-14">
+    01
   </div>
-
-      <!------HAMBURGER MENU--------->
-        <div class="-mr-2 -my-2 ml-3 md:hidden">
-          <div class="flex items-center justify-evenly">
-            <div class="mx-3">
-            {% if cart.item_count == 0 %}
-              <div></div>
-              {% else %}
-                <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-lg text-gray-500 ">
-            {{cart.item_count}}</a>
-            {% endif %}
-          </div>
-          <button x-on:click="searchBarOpen = true" type="button" class="px-1">
-            {%render 'icon-search'%}
-          </button>
-          <button x-on:click="mobileMenuOpen = true; searchBarOpen = false" type="button" class="bg-white p-2 inline-flex items-center justify-center focus:outline-none">
-              {%render "icon-menu" %}
-          </button>
-          </div>
-        </div>
-
-      
-
-
-
-        <!------CART BUTTON / ACCOUNT LINKS IF ENABLED------->
-        <div class="hidden md:flex item-center justify-end md:flex-1 space-x-5">
-          <button x-on:click="searchBarOpen = true" type="button" class="whitespace-nowrap text-sm text-gray-500">
-            SEARCH
-          </button>
-          <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-sm text-gray-500">
-            {{'BAG'}}({{cart.item_count}}) {% if shop.customer_accounts_enabled%} 
-            {% if customer %}
-              <a href="{{ routes.account_url }}" class="text-sm text-gray-500 hover:text-gray-900">
-                {%render 'icon-user'%}
-              </a>
-            
-              <!-- {{'LOG OUT' | customer_logout_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"'}} -->
-            {% else %}
-              <!-- {{ 'Login' | customer_login_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"' }}
-              {{'Register' | customer_register_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"'}} -->
-              <a href="{{routes.account_login_url}}" class="">
-              {%render 'icon-user'%}
-              </a>
-              
-            {% endif %} 
-            {% endif %}
-          </a>
-
-          
-        </div>
-
-        <!----HAMBURGER MENU CONTAINER------>
-        <div x-show="mobileMenuOpen" 
-       x-transition:enter="transition ease-in duration-200" 
-       x-transition:enter-start="opacity-100 transform scale-x-100 -translate-x-1/2" 
-       x-transition:enter-end="opacity-100 transform scale-x-100 translate-x-0" 
-       x-transition:leave="transition ease-out-in duration-500" 
-       x-transition:leave-start="opacity-100 transform scale-x-100 translate-x-0"
-       x-transition:leave-end="opacity-100 transform scale-x-0 -translate-x-1/2" 
-       
-        
-        class="absolute top-0 inset-x-0 z-100 origin-left md:hidden">
-          <div class="  w-full h-screen hamburger-container z-100">
-            <div class="pb-3 pl-2 pr-2 pt-2 divide-y-2 divide-gray-50">
-              <!---MOBILE MENU HEADER TITLE PLUS CLOSE BUTTON-->
-                <div class="flex items-center justify-between pb-3 px-2">
-                  <div>
-                     <a href="/">
-                    <h1 class="text-3xl font-bold truncate tracking-wide   text-white "> <!-- {{shop.name}} --> NoTW<span class="font-extralight">&trade;</span></h1>
-                  </a>
-                    <!-- <h1 class="text-lg text-gray-500">{{section.settings.mobile_menu_title}}</h1> -->
-                  </div>
-
-
-                <div class="-mr-2 -my-2 ml-3 md:hidden">
-                <div class="flex items-center justify-evenly">
-                <div class="mx-3">
-                {% if cart.item_count == 0 %}
-                  <div></div>
-                  {% else %}
-                    <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-lg text-white ">
-                {{cart.item_count}}</a>
-                {% endif %}
-               </div>
-               <button x-on:click="searchBarOpen = true; mobileMenuOpen = false "  type="button" class="px-1">
-                {%render 'icon-search2'%}
-                </button>
-              
-                <button  x-on:click="mobileMenuOpen = false" type="button" class=" rounded-md text-white p-2">
-                          {%render 'icon-close2' %}
-                        </button>
-                </div>
-                
-                
-              
-             </div>
-                    
-                 
-                    
-                
-                </div>
-
-
-              <!---LINKS FOR MOBILE MENU-->
-              <div class="justify-between">
-              <div class="pt-3 px-2">
-                <nav class="grid gap-y-5 ">
-                  {% for link in main_menu_linklist%}
-                    {% if link.links != blank %}
-
-                    {% assign mobile_link_handle = link.handle | replace: '-', '_' %}
-                    <div class="relative" x-data="{ {{mobile_link_handle}}: false }">
-                      <button x-on:click="{{mobile_link_handle}} =! {{mobile_link_handle}}" class="text-base text-white hover:text-gray-900 flex items-center justify-between w-full ">
-                        <div>{{link.title}}</div>
-                        {%render 'icon-dropdown' %}
-                      </button>
-                      
-                      <div x-show="{{mobile_link_handle}}" class="grid gap-7 py-3"> 
-                        {% for childlink in link.links %}
-                        <a href="{{childlink.url}}" class="-m-3 p-3 mt-2 flex items-center rounded-md text-gray-500 hover:text-gray-900 hover:bg-gray-50">
-                          <span class="ml-3">{{childlink.title}}</span>
-                        </a>
-                          
-                        {% endfor %}
-                      
-                      </div>
-                      
-                    </div>
-                    {% else %}
-                      <a class="uppercase text-xl text-white  " href="{{link.url}}">{{link.title}}</a>
-                      
-                    {% endif %}
-                  {% endfor %}
-
-                  
-                 
-
-                  
-
-                    {% if shop.customer_accounts_enabled%} 
-            {% if customer %}
-              <a href="{{ routes.account_url }}" class="text-xl text-white hover:text-gray-900">
-                ACCOUNT
-              </a>
-            
-              {{'LOG OUT' | customer_logout_link | replace: '<a', '<a class="text-xl text-white hover:text-gray-900"'}}
-            {% else %}
-              <!-- {{ 'Login' | customer_login_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"' }}
-              {{'Register' | customer_register_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"'}} -->
-              <a href="{{routes.account_login_url}}" class=" text-xl text-white">
-              ACCOUNT
-              </a>
-              
-            {% endif %} 
-            {% endif %}
-
-                {%- assign footer_linklist = section.settings.footer_linklist -%}
-                    {% if linklists[footer_linklist].links.size > 0 %}
-                    <div class="absolute bottom-0 pb-5 ">
-                      <ul class="mb-5 divide-y divide-solid divide-gray-100" >
-                        {% for link in linklists[footer_linklist].links %}
-                          <li class="pt-3 pb-1"><a href="{{ link.url }}" class="text-white hover:uppercase">{{ link.title }}</a></li>
-                        {% endfor %}
-                      </ul>
-                    </div>
-                    {% endif %}
-                </nav>
-
-                    </div>
-
-              </div>
-
-
-
-
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-    </div>
-    <div x-show="searchBarOpen" class="search-button w-full absolute top-12 bg-white  ">
-      <button type="button" x-on:click="searchBarOpen = false" class="absolute top-0 right-0 mr-5 mt-4 text-gray-500 z-20 items-center">
-        {% render 'icon-close' %}
-
-        
-
-      </button>
-      <div class="h-12 flex justify-center items-center border">
-        <form action="{{ routes.search_url }}" method="get" class="flex-auto">
-          <div class="relative text-gray-500 px-1 ">
-            <input type="search" name="q" placeholder="SEARCH" class="w-full relative bg-white h-10 px-5 pr-10  text-sm focus:outline-none">
-            <!-- <button type="submit" class="absolute right-0 top-0 mt-2 mr-2 md:mr-20">
-              {%render 'icon-search'%}
-            </button> -->
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
+  <div class="flex-initial w-64 text-blue-600">
+    02
+  </div>
+  <div class="flex-initial w-32 text-blue-600">
+    03
+  </div>
 </div>
 
 {% schema %} 
