--- a/art-by-metu/assets/tailwind.css
+++ b/art-by-metu/assets/tailwind.css
@@ -479,8 +479,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.5rem;
 }
 
+.flex{
+  display: flex;
+}
+
 .table{
   display: table;
+}
+
+.h-14{
+  height: 3.5rem;
 }
 
 .h-4{
@@ -495,12 +503,36 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1.25rem;
 }
 
+.w-14{
+  width: 3.5rem;
+}
+
+.w-64{
+  width: 16rem;
+}
+
+.w-32{
+  width: 8rem;
+}
+
 .w-4{
   width: 1rem;
 }
 
 .w-6{
   width: 1.5rem;
+}
+
+.flex-none{
+  flex: none;
+}
+
+.flex-initial{
+  flex: 0 1 auto;
+}
+
+.justify-center{
+  justify-content: center;
 }
 
 .bg-purple-700{
@@ -525,6 +557,21 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-blue-600{
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.text-pink-400{
+  --tw-text-opacity: 1;
+  color: rgb(244 114 182 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-pink-500{
+  --tw-text-opacity: 1;
+  color: rgb(236 72 153 / var(--tw-text-opacity));
 }
 
 .text-white{
