--- a/art-by-metu/sections/template-article.liquid
+++ b/art-by-metu/sections/template-article.liquid
@@ -54,8 +54,16 @@
         {% endif %}
     </div>
     <div id="comment_form" class="mb-8 text-white mt-14 md:mt-28">
+
         {%form 'new_comment', article %}
             <div class="flex-1 mx-auto items-center justify-center max-w-4xl  text-white">
+
+                {% if form.errors %}
+                        sorry, your comment was not posted 
+                    {% elsif posted.successfully? %}
+                        your comment has been posted successfully.
+                {% endif %}
+
                 <div class="px-1 md:flex mb-3">
                     <div class="md:px-3 md:w-1/2">
                         <input type="text" name="comment[author]" id="comment_author" placeholder="name" class="bg-transparent text-white w-full  py-3 border-b-2 border-white mb-3 focus:outline-none" required>
