changing padding on header

--- a/art-by-metu/sections/homepage-header.liquid
+++ b/art-by-metu/sections/homepage-header.liquid
@@ -10,7 +10,7 @@
 
 <div class="relative" x-data="{ mobileMenuOpen: false, searchBarOpen: false, navBarOpen: false }" x-cloak>
     <div class="relative pt-2 ">
-        <div class="mx-auto px-4 sm:px-6">
+        <div class="mx-auto sm:px-6">
             <div class="flex justify-between items-center pt-2 pb-2 md:justify-start md:space-x-10 -mt-2 ">
 
                 <div class="flex justify-between items-center -ml-1">
